RESOLVED FIXED47313
Handle massive input strings to normalizeLineEndingsToCRLF() more gracefully
https://bugs.webkit.org/show_bug.cgi?id=47313
Summary Handle massive input strings to normalizeLineEndingsToCRLF() more gracefully
Chris Evans
Reported 2010-10-06 16:13:47 PDT
Looks like there are integer wrap issues here. The upcoming patch detects pathological conditions and returns the empty string. This mirrors the behaviour of e.g. WebCore::base64Encode().
Attachments
Patch (1.72 KB, patch)
2010-10-06 16:17 PDT, Chris Evans
levin: review-
Patch (1.71 KB, patch)
2010-10-06 16:46 PDT, Chris Evans
no flags
Chris Evans
Comment 1 2010-10-06 16:17:06 PDT
Adam Barth
Comment 2 2010-10-06 16:37:22 PDT
Comment on attachment 70004 [details] Patch No test?
David Levin
Comment 3 2010-10-06 16:40:59 PDT
Comment on attachment 70004 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=70004&action=review Mr. Barth makes a good observation. Test? > WebCore/ChangeLog:3 > + Reviewed by Reviewed by NOBODY (OOPS!). "Reviewed by Reviewed by"
Chris Evans
Comment 4 2010-10-06 16:46:03 PDT
@abarth: I don't think this can be tested without crashing on 32-bit (virtual address space too small). Even on 64-bit, the test would be at best very slow and at worse prone to exhausting physical memory.
Chris Evans
Comment 5 2010-10-06 16:46:49 PDT
David Levin
Comment 6 2010-10-06 16:50:15 PDT
Comment on attachment 70012 [details] Patch Reasonable explanation about the test.
WebKit Commit Bot
Comment 7 2010-10-06 18:46:57 PDT
Comment on attachment 70012 [details] Patch Rejecting patch 70012 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', 'build-and-test', '--no-clean', '--no-update', '--test', '--quiet', '--non-interactive']" exit_code: 2 Last 500 characters of output: -dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Projects/CommitQueue/LayoutTests Testing 21468 test cases. http/tests/xmlhttprequest/cross-origin-no-credential-prompt.html -> failed Exiting early after 1 failures. 21325 tests run. 566.99s total testing time WARNING:webkitpy.common.system:Called kill_process with a non-existant pid 90163 21324 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 34 test cases (<1%) had stderr output Full output: http://queues.webkit.org/results/4193122
Chris Evans
Comment 8 2010-10-06 20:43:01 PDT
Seems unrelated; retrying.
WebKit Commit Bot
Comment 9 2010-10-06 21:15:51 PDT
Comment on attachment 70012 [details] Patch Rejecting patch 70012 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', 'build-and-test', '--no-clean', '--no-update', '--test', '--quiet', '--non-interactive']" exit_code: 2 Last 500 characters of output: 0.90 CPU) Running build-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Projects/CommitQueue/LayoutTests Testing 21469 test cases. http/tests/xmlhttprequest/failed-auth.html -> failed Exiting early after 1 failures. 21341 tests run. 565.75s total testing time WARNING:webkitpy.common.system:Called kill_process with a non-existant pid 4291 21340 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 34 test cases (<1%) had stderr output Full output: http://queues.webkit.org/results/4237080
David Levin
Comment 10 2010-10-06 22:15:20 PDT
re cq+, cq-, cq+, cq-, cq+ See defn insanity.
Chris Evans
Comment 11 2010-10-06 22:21:12 PDT
Not sure I follow? I can stop if that's what you saying. We're getting good data as to the current flake rate :)
David Levin
Comment 12 2010-10-06 22:23:55 PDT
(In reply to comment #11) > Not sure I follow? I can stop if that's what you saying. > We're getting good data as to the current flake rate :) It was reference to http://www.quotationspage.com/quote/26032.html Meant to be funny that's all.
WebKit Commit Bot
Comment 13 2010-10-06 22:42:22 PDT
Comment on attachment 70012 [details] Patch Clearing flags on attachment: 70012 Committed r69275: <http://trac.webkit.org/changeset/69275>
WebKit Commit Bot
Comment 14 2010-10-06 22:42:28 PDT
All reviewed patches have been landed. Closing bug.
Chris Evans
Comment 15 2010-10-06 22:43:46 PDT
A victory for insanity! I never knew that was Einstein...
Note You need to log in before you can comment on or make changes to this bug.