2010-10-06  Chris Evans  <cevans@google.com>

Reviewed by David Levin.

        https://bugs.webkit.org/show_bug.cgi?id=47313

        Fix integer errors with enormous input strings to newline normalization APIs.

        * platform/text/LineEnding.cpp:
        (WebCore::normalizeLineEndingsToCRLF): return the empty string upon huge input strings. (Behaves similarly to base64Encode now).
        (WebCore::normalizeToCROrLF): use the correct type for a string length.

Canonical link: https://commits.webkit.org/59876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69275 268f45cc-cd09-0410-ab3c-d52691b4dbfc